# tailwindcss-rs

./: .gitignore  Cargo.toml  README.md
src/: config.rs  default-config.json  generator.rs  main.rs  parser.rs  test.rs
src/config/: config.rs  mod.rs  parser.rs  plugin.rs  utility.rs
src/generator/: area.rs  buffer.rs  class.rs  css.rs  generate.rs  mod.rs  utils.rs
src/html/: parser.rs
