[package]
name = "tailwind-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4"
html5ever = "*"
markup5ever_rcdom = "0.1.0"
clap = { version = "3.1.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
